--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+env_logger = "0.11.5"
+serde = {version = "1.0.215", features = ["derive"]}
+serde-xml-rs = "0.6.0"
